# system_card_eval

./: .gitignore  README.md  REPORT.md  main.py  pyproject.toml
prompts/: system_prompt.txt
prompts/extractive/: eval_type_diversity.txt  external_validator_count.txt  risk_category_breadth.txt  stakeholder_diversity.txt  topic_coverage.txt
prompts/rubric/: alignment_controllability.txt  dangerous_capability_reporting.txt  eval_reporting_quality.txt  evidence_sufficiency.txt  limitation_specificity.txt  post_deployment_monitoring.txt  reasoning_consistency.txt  reasoning_depth.txt
results/: agreement.csv  all_headings.json  bias_analysis.json  canonical_topics.json  scores.json  summary.csv
scripts/: aggregate.py  config.py  evaluate.py  extract_text.py  final_plots.py  safety_analysis.py  test_pdf_vision.py  viral_analysis.py  visualize.py
